<resources>
    <string name="app_name">Java Basics</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="rate_us">Rate us</string>
    <string name="share_app">Share this app</string>
    <string name="next">Next</string>
    <string name="share_">share</string>
    <string name="message">message</string>
    <string name="topic">Topics</string>
    <string name="basics">Basics</string>
    <string name="arrays">Arrays</string>
    <string name="matrix">Matrix</string>
    <string name="all">All</string>
    <string name="helloprg">public class hello \n{\n\tpublic static void main(String args[])\n\t\t{\n\t\t\tSystem.out.println(\"hello programmers\");\n\t\t}\n}</string>
    <string name="outhelloprg"><b>OUTPUT</b>\nhello programmers</string>
    <string name="iflargest">public class largest\n{\n\tpublic void Test(int x,int y,int z)\n\t\t{\n\t\t\tint max=0;\n\t\t\tmax=x;\n\t\t\tif(y&gt;max)\n\t\t\tmax=y;\n\t\t\tif(z&gt;max)\n\t\t\tmax=z;\n\t\t\tSystem.out.println(\"Largest number is \" + max);\n\t\t}\n\tpublic static void main(String args[])\n\t\t{\n\t\t\tlargest ob=new largest();\n\t\t\tob.Test(4, 5, 6);\n\t\t}\n}</string>
    <string name="outiflargest"><b>OUTPUT</b>\n\nLargest number is 6</string>
    <string name="nestedif">public class nested\n\t{\n\t\tvoid compute(int a,int b)\n\t\t\t{\n\t\t\t\tif(a&gt;1)\n\t\t\t\t\t{\n\t\t\t\t\t\tif(b&gt;1)\n\t\t\t\t\t\t\tSystem.out.println("both a and b are greater than 1");\n\t\t\t\t\t\telse\n\t\t\t\t\t\t\tSystem.out.println(\"only a is greater than 1\");\n\t\t\t\t\t}\n\t\t\t}\n\t\tpublic static void main(String args[])\n\t\t\t{\n\t\t\t\tnested ob=new nested();\n\t\t\t\tob.compute(2,3);\n\t\t\t}\n\t}</string>
    <string name="outnestedif"><b>OUTPUT</b>\n\nboth a and b are greater than 1</string>
    <string name="ladder">public class case_char\n\t{\n\t\tpublic void Test(char ch)\n\t\t\t{\n\t\t\t\tif(ch>=48 &amp;&amp; ch&lt;=57)\n\t\t\t\t\tSystem.out.println(\"is a digit\");\n\t\t\t\telse if(ch>=65 &amp;&amp; ch&lt;=90)\n\t\t\t\t\tSystem.out.println(\"is a UPPERCASE character\");\n\t\t\t\telse if(ch>97 &amp;&amp; ch&lt;=122)\n\t\t\t\t\tSystem.out.println(\"is a lowercase character\");\n\t\t\t\telse\n\t\t\t\t\tSystem.out.println(\"is a Special character\");\n\t\t\t}\n\t\tpublic static void main(String args[])\n\t\t\t{\n\t\t\t\tcase_char ob=new case_char();\n\t\t\t\tSystem.out.println(\"passing d\");\n\t\t\t\tob.Test(\'d\');\n\t\t\t\tSystem.out.println(\"passing A\");\n\t\t\t\tob.Test(\'A\');\n\t\t\t\tSystem.out.println(\"passing 1\");\n\t\t\t\tob.Test(\'1\');\n\t\t\t\tSystem.out.println(\"passing *\");\n\t\t\t\tob.Test(\'*\');\n\t\t\t}\n\t}</string>
    <string name="outladder">OUTPUT\n\npassing d\nis a lowercase character\npassing A\nis a UPPERCASE character\npassing 1\nis a digit\npassing *\nis a Special character</string>
    <string name="switch_">public class area\n\t{\n\t\tpublic void choice(int a,int b,int s)\n\t\t\t{\n\t\t\t\tswitch(s)\n\t\t\t\t\t{\n\t\t\t\t\t\tcase 1:System.out.println(\"sum is\"+ (a+b));\n\t\t\t\t\t\tbreak;\n\t\t\t\t\t\tcase 2:System.out.println(\"difference is\"+ (a-b));\n\t\t\t\t\t\tbreak;\n\t\t\t\t\t\tcase 3:System.out.println(\"product is\"+ (a*b));\n\t\t\t\t\t\tbreak;\n\t\t\t\t\t\tcase 4:System.out.println(\"division is\"+ (a/b));\n\t\t\t\t\t\tbreak;\n\t\t\t\t\t\tdefault:System.out.println(\"wrong choice\");\n\t\t\t\t\t}\n\t\t\t}\n\t\tpublic static void main(String args[])\n\t\t\t{\n\t\t\t\tarea ob=new area ();\n\t\t\t\tob.choice(4,1,1);\n\t\t\t\tob.choice(4,1,2);\n\t\t\t\tob.choice(4,1,3);\n\t\t\t\tob.choice(4,1,4);\n\t\t\t}\n\t}</string>
    <string name="outswitch"><b>OUTPUT</b>\n\nsum is 5\ndifference is 3\nproduct is 4\ndivision is 4</string>
    <string name="Bubblesort">import java.util.Scanner;\npublic class BubbleSort\n\t{\n\t\tpublic static void main(String args[])\n\t\t\t{\n\t\t\t\tint n,swap;\n\t\t\t\tScanner s=new Scanner(System.in);\n\t\t\t\tSystem.out.println(\"enter number of integers to sort\");\n\t\t\t\tn=s.nextInt();\n\t\t\t\tint[] arr=new int[n];\n\t\t\t\tSystem.out.println(\"enter\" +n+ \"integers\");\n\t\t\t\tfor(int i=0;i &lt; n;i++)\n\t\t\t\t\tarr[i]=s.nextInt();\n\t\t\t\tfor(int i=0;i &lt; n-1;i++)\n\t\t\t\t\t{\n\t\t\t\t\t\tfor(int j=0;j &lt; n-i-1;j++)\n\t\t\t\t\t\t\t{\n\t\t\t\t\t\t\t\tif(arr[j] &gt; arr[j+1])\n\t\t\t\t\t\t\t\t\t{\n\t\t\t\t\t\t\t\t\t\tswap=arr[j];\n\t\t\t\t\t\t\t\t\t\tarr[j]=arr[j+1];\n\t\t\t\t\t\t\t\t\t\tarr[j+1]=swap;\n\t\t\t\t\t\t\t\t\t}\n\t\t\t\t\t\t\t}\n\t\t\t\t\t}\n\t\t\t\tSystem.out.println(\"sorted numbers are\");\n\t\t\t\tfor(int i=0;i &lt; n;i++)\n\t\t\t\t\tSystem.out.println(arr[i]);\n\t\t\t}\n\t}</string>
    <string name="outBubblesort"><b>OUTPUT</b>\n\nenter number of integers to sort\n7\nenter7integers\n8\n4\n6\n1\n3\n0\n9\nsorted numbers are\n0\n1\n3\n4\n6\n8\n9</string>
    <string name="for_">public class for_\n\t{\n\t\tpublic static void main(String args[])\n\t\t\t{\n\t\t\t\tint i;\n\t\t\t\tfor(i=0;i&lt;10;i++)\n\t\t\t\t\t{\n\t\t\t\t\t\tSystem.out.println("i="+i);\n\t\t\t\t\t}\n\t\t\t}\n\t}</string>
    <string name="outfor_"><b>OUTPUT</b>\n\ni=0\ni=1\ni=2\ni=3\ni=4\ni=5\ni=6\ni=7\ni=8\ni=9</string>
    <string name="while_">public class while_\n\t{\n\t\tpublic static void main(String args[])\n\t\t\t{\n\t\t\t\tint i=1;\n\t\t\t\twhile(i&lt;10)\n\t\t\t\t\t{\n\t\t\t\t\t\tSystem.out.println("i="+i);\n\t\t\t\t\t\ti=i+1;\n\t\t\t\t\t}\n\t\t\t}\n\t}</string>
    <string name="outwhile_"><b>OUTPUT</b>\n\ni=0\ni=1\ni=2\ni=3\ni=4\ni=5\ni=6\ni=7\ni=8\ni=9</string>
    <string name="dowhile_">public class dowhile_\n\t{\n\t\tpublic static void main(String args[])\n\t\t\t{\n\t\t\t\tint i=1;\n\t\t\t\tdo\n\t\t\t\t\t{\n\t\t\t\t\t\tSystem.out.println("i="+i);\n\t\t\t\t\t\ti=i+1;\n\t\t\t\t\t}while(i&lt;10);\n\t\t\t}\n\t}</string>
    <string name="outdowhile_"><b>OUTPUT</b>\n\ni=0\ni=1\ni=2\ni=3\ni=4\ni=5\ni=6\ni=7\ni=8\ni=9</string>
    <string name="linear">import java.util.Scanner;\npublic class linear\n\t{\n\t\tpublic static void main(String args[])\n\t\t\t{\n\t\t\t\tint i,n,x,arr[];\n\t\t\t\tScanner s=new Scanner(System.in);\n\t\t\t\tSystem.out.println("Enter number of elements");\n\t\t\t\tn=s.nextInt();\n\t\t\t\tarr=new int[n];\n\t\t\t\tSystem.out.println("enter "+n+" 5integers");\n\t\t\t\tfor(i=0;i&lt;n;i++)\n\t\t\t\t\tarr[i]=s.nextInt();\n\t\t\t\tSystem.out.println("enter no. to be searched");\n\t\t\t\tx=s.nextInt();\n\t\t\t\tfor(i=0;i&lt;n;i++)\n\t\t\t\t\t{\n\t\t\t\t\t\tif(x==arr[i])\n\t\t\t\t\t\t\t{\nSystem.out.println(x+" is at location "+(i+1)+".");\n\t\t\t\t\t\t\tbreak;\n\t\t\t\t\t\t}\n\t\t\t\t}\n\t\t\tif(i==n)\n\t\t\t\t{\n\t\t\t\t\tSystem.out.println(x+"is not present.");\n\t\t\t\t}\n\t\t}\n\t}</string>
    <string name="outlinear"><b>OUTPUT</b>\n\nEnter number of elements\n5\nenter 5 integers\n2\n6\n7\n12\n18\nenter no. to be searched\n6\n6 is at location 2.</string>
    <string name="selectionsort">import java.util.Scanner;\npublic class Selection\n\t{\n\t\tpublic static void selsort(int a[],int size)\n\t\t\t{\n\t\t\t\tint i,j,k,small,tmp,pos;\n\t\t\t\tfor(i=0;i&lt;size;i++)\n\t\t\t\t\t{\n\t\t\t\t\t\tsmall=a[i];\n\t\t\t\t\t\tpos=i;\n\t\t\t\t\t\tfor(j=i+1;j&lt;size;j++)\n\t\t\t\t\t\t\t{\n\t\t\t\t\t\t\t\tif(a[j]&lt;small)\n\t\t\t\t\t\t\t\t\t{\n\t\t\t\t\t\t\t\t\t\tsmall=a[j];\n\t\t\t\t\t\t\t\t\t\tpos=j;\n\t\t\t\t\t\t\t\t\t}\n\t\t\t\t\t\t\t}\n\t\t\t\t\t\ttmp=a[i];\n\t\t\t\t\t\ta[i]=a[pos];\n\t\t\t\t\t\ta[pos]=tmp;\n\t\t\t\t\t\tSystem.out.println("\narray after pass "+(i+1)+" is");\n\t\t\t\t\t\tfor(k=0;k&lt;size;k++)\n\t\t\t\t\t\t\tSystem.out.print(a[k]+"\t");\n\t\t\t\t\t}\n\t\t\t\tSystem.out.println("\narray in sorted form is");\n\t\t\t\tfor(i=0;i &lt;size;i++)\n\t\t\t\t\tSystem.out.print(a[i]+"\t");\n\t\t\t}\n\t\tpublic static void main(String args[])\n\t\t\t{\n\t\t\t\tint arrsize,c;\n\t\t\t\tScanner s=new Scanner(System.in);\n\t\t\t\tSystem.out.println("enter number of elements to sort.");\n\t\t\t\tarrsize=s.nextInt();\n\t\t\t\tint arr[]=new int[arrsize];\n\t\t\t\tSystem.out.println("enter "+(arrsize)+" numbers");\n\t\t\t\tfor(c=0;c &lt;arrsize;c++)\n\t\t\t\t\tarr[c]=s.nextInt();\n\t\t\t\tselsort(arr,arrsize);\n\t\t\t}\n\t}</string>
    <string name="outselectionsort"><b>OUTPUT</b>\n\nenter number of elements to sort.\n4\nenter 4 numbers\n8\n2\n1\n3\n\narray after pass 1 is\n1	2	8	3	\narray after pass 2 is\n1	2	8	3	\narray after pass 3 is\n1	2	3	8	\narray after pass 4 is\n1	2	3	8	\narray in sorted form is\n1	2	3	8</string>
    <string name="binary_">import java.util.Scanner;\npublic class binary\n\t{\n\t\tpublic static void search(int a[],int size,int n)\n\t\t\t{\n\t\t\t\tint f=0,L,U,M=0;\n\t\t\t\tL=0;\n\t\t\t\tU=size-1;\n\t\t\t\twhile(L&lt;=U)\n\t\t\t\t\t{\n\t\t\t\t\t\tM=(L+U)/2;\n\t\t\t\t\t\tif(n&lt;a[M])\n\t\t\t\t\t\t\tL=M+1;\n\t\t\t\t\t\telse if(n&lt;a[M])\n\t\t\t\t\t\t\tU=M-1;\n\t\t\t\t\t\telse\n\t\t\t\t\t\t\t{\n\t\t\t\t\t\t\t\tf=1;\n\t\t\t\t\t\t\t\tbreak;\n\t\t\t\t\t\t\t}\n\t\t\t\t\t}\n\t\t\t\tif(f==1)\n\t\t\t\t\tSystem.out.println(\"number is present at position \"+(M+1));\n\t\t\t\t\telse\n\t\t\t\t\t\tSystem.out.println(\"number is not present\");\n\t\t\t}\n\t\t\tpublic static void main(String args[])\n\t\t\t\t{\n\t\t\t\t\tint arr[],arrsize,i,x;\n\t\t\t\t\tScanner s=new Scanner(System.in);\n\t\t\t\t\tSystem.out.println(\"enter number of elements\");\n\t\t\t\t\tarrsize=s.nextInt();\n\t\t\t\t\tarr=new int[arrsize];\n\t\t\t\t\tSystem.out.println(\"enter number in ascending order\");\n\t\t\t\t\tfor(i=0;i&lt;arrsize;i++)\n\t\t\t\t\t\tarr[i]=s.nextInt();\n\t\t\t\t\tSystem.out.println(\"enter number to be searched\");\n\t\t\t\t\tx=s.nextInt();\n\t\t\t\t\tsearch(arr,arrsize,x);\n\t\t\t\t}\n\t}</string>
    <string name="outbinary_"><b>OUTPUT</b>\n\nenter number of elements\n5\nenter number in ascending order\n4\n7\n9\n12\n18\nenter number to be searched\n9\nnumber is present at position</string>
    <string name="converter">public class ASCII\n\t{\n\t\tpublic static char ASCIItochar(int asciivalue)\n\t\t\t{\n\t\t\t\treturn (char)asciivalue;\n\t\t\t}\n\t\tpublic static int chartoASCII(char character)\n\t\t\t{\n\t\t\t\treturn (int)character;\n\t\t\t}\n\t\tpublic static void main(String args[])\n\t\t\t{\n\t\t\t\tchar alpha=\&apos;C\&apos;;\n\t\t\t\tint i=67;\n\t\t\t\tSystem.out.println(alpha+&quot; ASCII is &quot;+chartoASCII(alpha));\n\t\t\t\tSystem.out.println(i+&quot; char is &quot;+ASCIItochar(i));\n\t\t\t}\n\t}</string>
    <string name="outconverter"><b>OUTPUT</b>\n\nC ASCII is 67\n67 char is C</string>
    <string name="arrsum">import java.util.Scanner;\npublic class arrsum \n\t{\n\t\tpublic static void main(String args[])\n\t\t\t{\n\t\t\t\tint n,sum=0;\n\t\t\t\tScanner s=new Scanner(System.in);\n\t\t\t\tSystem.out.println(\"enter number of integers \");\n\t\t\t\tn=s.nextInt();\n\t\t\t\tint[] arr=new int[n];\n\t\t\t\tSystem.out.println("enter" +n+ "integers");\n\t\t\t\tfor(int i=0;i&lt;n;i++)\n\t\t\t\t\t{\n\t\t\t\t\t\tarr[i]=s.nextInt();\n\t\t\t\t\t\tsum=sum+arr[i];\n\t\t\t\t\t}\n\t\t\t\tSystem.out.println(\"sum of array elements = \"+sum);\n\t\t\t}\n\t}</string>
    <string name="outarrsum"><b>OUTPUT</b>\n\nenter number of integers \n4\nenter4integers\n1\n2\n3\n4\nsum of array elements = 10</string>
</resources>